--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Facebook</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <div id="header">
@@ -80,11 +83,11 @@
             <label for="other">Other</label>
             <br><br>
 
-<h5>By clicking Sign Up, you agree to our <a href="facebook"> Terms</a> ,<a href="facebook">  Data Policy</a> and
-    <a href="facebook">  Cookie Policy</a> . You may receive SMS notifications from us and can opt out at any time.
-</h6>
+            <h5>By clicking Sign Up, you agree to our <a href="facebook"> Terms</a> ,<a href="facebook">  Data Policy</a> and
+                <a href="facebook">  Cookie Policy</a> . You may receive SMS notifications from us and can opt out at any time.
+                </h6>
 
-            <input type="submit" value="sign up">
+                <input type="submit" value="sign up">
         </form>
         <h5><a href="facebook.com">Create a Page</a> for a celebrity, band or business.</h5>
     </div>
