--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     </div>
     <div id="sign">
         <form>
-            <label for="Email">Email or phone</label> <label for="password">password </label> <br>
+            <label for="Email">Email or phone</label> 
+            <label for="password">password </label>
+            <br>
             <input type="text" name="Email">
             <input type="password" name="password">
             <input type="submit" value="Log in" id="LoginBtn">
@@ -25,7 +27,9 @@
 
 <div id=body>
     <div id="map">
-        <h2><strong>Facebook helps you connect and share with the people in your life.</strong></h2>
+        <h2>
+            <strong>Facebook helps you connect and share with the people in your life.</strong>
+        </h2>
         <img src="map.PNG">
 
     </div>
@@ -35,8 +39,10 @@
             <h1>Create a new account</h1>
             <h3> It's quick and easy.</h3>
             <input type="text" name="1stname" placeholder="first name">
-            <input type="text" name="Surname" placeholder="Surname"><br><br>
-            <input type="email" placeholder="Mobile number or email address"><br><br>
+            <input type="text" name="Surname" placeholder="Surname">
+            <br><br>
+            <input type="email" placeholder="Mobile number or email address">
+            <br><br>
             <input type="password" placeholder="New Password"><br>
 
             <h3> Birthday</h3>
@@ -83,8 +89,11 @@
             <label for="other">Other</label>
             <br><br>
 
-            <h5>By clicking Sign Up, you agree to our <a href="facebook"> Terms</a> ,<a href="facebook">  Data Policy</a> and
-                <a href="facebook">  Cookie Policy</a> . You may receive SMS notifications from us and can opt out at any time.
+            <h5>By clicking Sign Up, you agree to our 
+                <a href="facebook"> Terms</a> ,
+                <a href="facebook">  Data Policy</a> and
+                <a href="facebook">  Cookie Policy</a> 
+                . You may receive SMS notifications from us and can opt out at any time.
                 </h6>
 
                 <input type="submit" value="sign up">
